# cshape

./: .gitignore  CMakeLists.txt  README.md  makefile
example/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/cshape/: nurbs.h
src/: CMakeLists.txt  makefile  math.cpp  math.hpp  nurbs.cpp  nurbs.hpp  test_basis.cpp  test_knotvector.cpp  test_math.cpp  test_nurbs.cpp
test/: CMakeLists.txt  test_geom.cpp  test_nurbs.cpp
